front end fixes

--- a/src/app/add-details/add-details.component.css
+++ b/src/app/add-details/add-details.component.css
@@ -198,6 +198,7 @@ input[type="file"] {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 4vh;
 }
 
 .box {
@@ -219,4 +220,11 @@ input[type="file"] {
   /*margin-left: 7vw;*/
   display: flex;
   justify-content: center;
+}
+
+.general__rating {
+  margin-top: 1vh;
+  display: flex;
+  justify-content: center;
+  font-size: 1.7vw;
 }
