--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -64,16 +64,17 @@
       <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="locationChosen"></agm-marker>
     </agm-map>
     <div class="suggested__price" *ngIf="adSuggestedPrice !== 0">
-      <p>Pret sugerat: {{ adSuggestedPrice.toFixed(0) }}
+      <button class="btn btn-info">Pret sugerat: {{ adSuggestedPrice.toFixed(0) }}</button>
     </div>
     <mat-form-field>
       <input type="number" placeholder="Pret..." matInput formControlName="price" autocomplete="off">
     </mat-form-field>
     <label> Imagini... (PNG/JPG/...):</label>
     <br>
-    <input type="file" id="file" multiple (change)="getFileDetails($event)" accept="image/*">
+    <input type="file" id="file" multiple (change)="getFileDetails($event)" accept="image/*" class="images__input">
     <br>
-    <button [disabled]="!validForm() || !locationChosen || myFiles.length <= 0" class="btn btn-success form-control custom__button" type="submit">Adauga Anunt</button>
+    <button [disabled]="!validForm() || !locationChosen || myFiles.length <= 0"
+            class="btn btn-success form-control custom__button" type="submit">Adauga Anunt</button>
   </form>
 </div>
 </mat-dialog-content>
