--- a/src/app/modal-agreement/modal-agreement.component.html
+++ b/src/app/modal-agreement/modal-agreement.component.html
@@ -1,7 +1,7 @@
-<h2 class="title">Anuntul va fi sters!</h2>
-<p class="modal__info">Stergerea anuntului este ireversibila!</p>
-<p class="modal__info2">Confirmati stergerea anuntului</p>
+<h2 class="title">Anunțul va fi șters!</h2>
+<p class="modal__info">Ștergerea anunțului este ireversibilă!</p>
+<p class="modal__info2">Confirmați stergerea anunțului!</p>
   <div class="confirm__buttons">
-    <button mat-raised-button mat-button color="primary" (click)="confirmDelete()">Confirma Stergerea!</button>
-    <button mat-raised-button mat-button color="warn" (click)="closeModal()">Inchide!</button>
+    <button mat-raised-button mat-button color="primary" (click)="confirmDelete()">Confirmă ștergerea</button>
+    <button mat-raised-button mat-button color="warn" (click)="closeModal()">Închide</button>
   </div>
