--- a/src/app/user-list/user-list.component.css
+++ b/src/app/user-list/user-list.component.css
@@ -1,4 +1,11 @@
 .title{
   display: flex;
   justify-content: center;
+  margin-bottom: 4vh;
+}
+
+.description__container {
+  margin-left: 10vw;
+  margin-right:  10vw;
+  margin-bottom: 4vh;
 }
