--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,5 +1,8 @@
 <ng4-loading-spinner></ng4-loading-spinner>
-<h1 class="ads__title">Favorite: </h1>
+<div class="ads__title">
+  <h1>Favorite: </h1>
+  <h1 *ngIf="userService.favoriteAds.length === 0" class="ads__message">Nu au fost salvate anunțuri favorite</h1>
+</div>
 <div class="custom__container">
   <div *ngFor="let ad of userService.favoriteAds | paginate: {itemsPerPage: userService.itemsOnPage, currentPage: userService.page}; let i = index">
     <mat-card class="card__class">
@@ -18,10 +21,10 @@
     </mat-card><br>
   </div>
 </div>
-<div class="myPaginationContainer">
+<div class="myPaginationContainer" *ngIf="userService.favoriteAds.length > 0">
   <pagination-controls class="myPagination" (pageChange)="userService.page = $event"
-                       previousLabel="Inapoi"
-                       nextLabel="Inainte" maxSize="5">
+                       previousLabel="Înapoi"
+                       nextLabel="Înainte" maxSize="5">
   </pagination-controls>
 </div>
 
