--- a/src/app/my-ads/my-ads.component.html
+++ b/src/app/my-ads/my-ads.component.html
@@ -1,5 +1,8 @@
 <ng4-loading-spinner></ng4-loading-spinner>
-<h1 class="ads__title">Anunturile Mele: </h1>
+<div class="ads__title">
+  <h1>Anunturile Mele: </h1>
+  <h1 *ngIf="userService.myAds.length === 0">Nu aveți anunțuri adăugate!</h1>
+</div>
 <div class="custom__container">
   <div *ngFor="let ad of userService.myAds | paginate: {itemsPerPage: userService.itemsOnPage, currentPage: userService.page}; let i = index">
     <mat-card class="card__class">
@@ -18,7 +21,7 @@
     </mat-card><br>
   </div>
 </div>
-<div class="myPaginationContainer">
+<div class="myPaginationContainer" *ngIf="userService.myAds.length > 0">
   <pagination-controls class="myPagination" (pageChange)="userService.page = $event"
                        previousLabel="Inapoi"
                        nextLabel="Inainte" maxSize="5">
